# mfem

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  install.sh  install_4.4.sh  makefile
config/: defaults.cmake  defaults.mk  makefile  user.cmake
config/cmake/modules/: MfemCmakeUtilities.cmake
data/: 16_16_16.mesh  16_16_16_translate.mesh  16_16_16_translate.msh  1MAG.pqr  4_4_4.mesh  4_4_4_translate.mesh  8_8_8.mesh  8_8_8_translate.mesh  8_8_8_translate.msh  facet_normal2.msh  inline-tri-modify.mesh  one_tet.mesh  one_tet.msh  self_defined.mesh  self_defined.msh  simple.mesh  simple.msh  simple_.mesh  simple_.msh  simple_2.mesh  simple_2.msh  simple__.mesh  simple__.msh  special.mesh  special.msh
examples/: ex10p.cpp  ex16p.cpp  ex18.hpp  ex18p.cpp  ex19.cpp  ex1p.cpp  ex5p.cpp  ex9.cpp  ex9p.cpp  makefile
examples/petsc/: CMakeLists.txt  ex10p.cpp  ex1p.cpp  ex9p.cpp  snes_ex5.cpp  ts_tutorial_ex1.cpp  ts_tutorial_ex2.cpp  ts_tutorial_ex3.cpp  ts_tutorial_ex4.cpp
fem/: CMakeLists.txt  bilinearform.cpp  bilininteg.hpp  convergence.hpp  linearform.cpp  linearform.hpp  lininteg.hpp  pbilinearform.cpp  pgridfunc.cpp
linalg/: hypre.cpp  hypre.hpp  ode.cpp  ode.hpp  operator.hpp  petsc.cpp  petsc.hpp
mesh/: mesh.cpp  pmesh.cpp  pncmesh.cpp
miniapps/: CMakeLists.txt
miniapps/electromagnetics/: electromagnetics.hpp  joule.cpp  joule_solver.cpp  joule_solver.hpp  maxwell.cpp  maxwell_solver.cpp  maxwell_solver.hpp
miniapps/mhd/: imMHDp.cpp  imResistiveMHDOperatorp.hpp  makefile
miniapps/navier/: navier_3dfoc.cpp  navier_solver.cpp
miniapps/pnp/: CMakeLists.txt  FindSLEPc.cmake  bsub.script
miniapps/pnp/EAFE_SUPG_advection_diffusion/: CMakeLists.txt  ComputeAnalyticExpressions.py  InputParameters.py  ModifyParameters.py  adv_diff_3D.cpp  adv_diff_3D.hpp  run.sh  run1.sh
miniapps/pnp/examples/: CMakeLists.txt  ComputeAnalyticSolution.py  Mult_TrueMult.cpp  adv_diff.cpp  adv_diff_petsc.opts  demo.cpp  example.cpp  h1_project_dg.cpp  inhomogeneousBdc.cpp  project_coefficient.cpp  slepc_demo.cpp
miniapps/pnp/pnp_box/: CMakeLists.txt  ComputeAnalyticExpressions.py  gummel_amg  gummel_cg_box_petsc_opts  gummel_dg_box_petsc_opts  newton_amg  newton_cg_box_petsc_opts  newton_dg_box_petsc_opts  newton_fgmres  newton_ilu  newton_lgmres  newton_lu  newton_shell  pnp_box_petsc_opts  pnp_steadystate_box.cpp  pnp_steadystate_box.hpp  pnp_steadystate_box_petsc.opts  pnp_steadystate_box_solvers.hpp  run.sh
miniapps/pnp/pnp_box_steadystate/: 4_4_4_translate.msh  CMakeLists.txt  ComputeAnalyticExpressions.py  gummel_amg  gummel_ilu  gummel_lu  newton_amg  newton_lu  pnp_box_petsc_opts  pnp_box_steadystate.cpp  pnp_box_steadystate.hpp  pnp_box_steadystate_solvers.hpp
miniapps/pnp/pnp_box_timedependent/: CMakeLists.txt  ComputeAnalyticExpressions.py  bsub.box  gummel_dg_lu  pnp_box_petsc_opts  pnp_box_timedependent.cpp  pnp_box_timedependent.hpp  pnp_box_timedependent_solvers.hpp  run.sh
miniapps/pnp/pnp_data/: 1bl8.pqr  2Jk4.pqr  BPTI.pqr  CMakeLists.txt  gummel_amg  gummel_dg_lu  newton_amg  newton_ilu  newton_lu  pnp_box_petsc_opts  pnp_protein_petsc_opts  protein_newton_amg  protein_newton_lu
miniapps/pnp/pnp_protein/: CMakeLists.txt  gummel_amg  gummel_ilu  gummel_lu  newton_amg  newton_amg_lu  newton_lu  newton_shell  pnp_protein_petsc_opts  pnp_protein_preconditioners.hpp  pnp_steadystate_protein.cpp  pnp_steadystate_protein.hpp  pnp_steadystate_protein_petsc.opts  pnp_steadystate_protein_solvers.hpp  run.sh
miniapps/pnp/pnp_protein_steadystate/: CMakeLists.txt  bsub.protein  pnp_protein_preconditioners.hpp  pnp_steadystate_protein.cpp  pnp_steadystate_protein.hpp  run.sh
miniapps/pnp/pnp_protein_timedependent/: CMakeLists.txt  pnp_protein_timedependent.cpp  pnp_protein_timedependent.hpp  pnp_protein_timedependent_solvers.hpp
miniapps/pnp/utils/: AnalyticSolutionsWithMultiplePointCharges.hpp  CMakeLists.txt  DGDiffusion_Edge_Symmetry_Penalty.hpp  DGEdgeIntegrator.hpp  DGSelfBdrFaceIntegrator.hpp  DGSelfTraceIntegrator.hpp  EAFE_ModifyStiffnessMatrix.hpp  GradConvection_Integrator.hpp  Interpolation_Projection.hpp  LocalConservation.hpp  MFEM2Gmsh.py  MFEM2PETSc.hpp  Medit2Gmsh.py  MeshInfo.hpp  NonlinearConvection_Integrator.hpp  NonlinearPoisson_Integrator.hpp  NonlinearReaction_Integrator.hpp  PNP_BCHandler.hpp  PNP_Preconditioners.hpp  PQR_GreenFunc_PhysicalParameters.hpp  PlotConvergenceRate.py  PrintMesh.hpp  ProteinWaterInterfaceIntegrators.hpp  ReorderElementIndex.py  SUPG_Integrator.hpp  SelectedElement_DiffusionIntegrator.hpp  SelfDefined_LinearForm.hpp  StdFunctionCoefficient.hpp  TranslationMesh.py  gnuplot_cpp.hpp  gnuplot_cpp_ex.cpp  interface1.msh  matplotlibcpp.hpp  matplotlibcpp_ex.cpp  mfem_utils.hpp  modify_experiment_parameters.py  output_linear_system.py  petsc_utils.hpp  plot_conservative.py  plot_peclet.py  (+4 more)
tests/convergence/: makefile
